# polars-faer-examples

./: Cargo.toml  README.md  benchmark.sh
data/: data_f10_s10000_test.csv  data_f10_s10000_train.csv  data_f10_s1000_test.csv  data_f10_s1000_train.csv  datasets.json  results.json
src/: main.rs
