[package]
name = "polars_faer_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.8"
polars = { version = "0.33.2", features = ["lazy"] }
faer = { version = "0.14.1", features = ["polars"] }
serde_json = "1.0.108"
